spacing + fixed multiple transitions syntax error

--- a/tcf_website/static/base/navbar.css
+++ b/tcf_website/static/base/navbar.css
@@ -14,14 +14,13 @@
     justify-content: flex-start;
     width: fit-content;
     height: calc(70px - 8px - 8px);
-    padding: 0px;
+    padding: 1px 0px 0px 0px;
     margin: 0px 16px 0px 0px;
     border-radius: calc(.25rem - 1px);
 
     /* Animation */
     transform: scale(1.0);
-    transition: padding-left .25s;
-    transition: transform .5s;
+    transition: padding-left .25s, transform .5s;
 }
 
 .tCF:hover {
@@ -43,7 +42,9 @@
     .tCF {
         width: calc(240px - 16px - 16px);
         height: calc(70px - 8px - 8px);
-        padding: 0px;
+        padding-top: 0px;
+        padding-right: 0px;
+        padding-bottom: 0px;
         margin: 0px 16px 0px 0px;
 
         /* Animation */
